Fix apply section mobile padding

--- a/src/css/art-to-heart-styles.css
+++ b/src/css/art-to-heart-styles.css
@@ -626,6 +626,10 @@ ol li {
         height: 15rem;
     }
 
+    .how-to-apply-container {
+        padding: 4rem 1rem;
+    }
+
     .apply-columns-container {
         flex-direction: column;
     }
